Styled mode button, fixed scrollbars always appearing

--- a/front/style.css
+++ b/front/style.css
@@ -1,5 +1,5 @@
 #note_area{
-    overflow:scroll;
+    overflow:auto;
     border:1px solid #CDCDC1;
     background: #CDCDC1;
 }
@@ -20,7 +20,7 @@
     width:99%;
     min-height:20px;
     max-height:500px;
-    overflow-y:scroll;
+    overflow-y:auto;
 }
 
 #index_area{
@@ -53,7 +53,6 @@
 }
 
 .remove_button {
-   border-top: 1px solid #96d1f8;
    background: #de7676;
    background: -webkit-gradient(linear, left top, left bottom, from(#d62f3d), to(#de7676));
    background: -webkit-linear-gradient(top, #d62f3d, #de7676);
@@ -85,7 +84,6 @@
    }
 
 .add_button {
-   border-top: 1px solid #96d1f8;
    background: #b5d194;
    background: -webkit-gradient(linear, left top, left bottom, from(#2fd44d), to(#b5d194));
    background: -webkit-linear-gradient(top, #2fd44d, #b5d194);
@@ -116,6 +114,53 @@
    background: #1b5c3d;
    }
 
+.mode_button_read{
+   padding: 5px 10px;
+   -webkit-border-radius: 8px;
+   -moz-border-radius: 8px;
+   border-radius: 8px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+   color: white;
+   font-size: 13px;
+   font-family: Georgia, serif;
+   text-decoration: none;
+   vertical-align: middle;
+   }
+
+.mode_button_edit{
+   background: #b5d194;
+   background: -webkit-gradient(linear, left top, left bottom, from(#d62f3d), to(#de7676));
+   background: -webkit-linear-gradient(top, #d62f3d, #de7676);
+   background: -moz-linear-gradient(top, #d62f3d, #de7676);
+   background: -ms-linear-gradient(top, #d62f3d, #de7676);
+   background: -o-linear-gradient(top, #d62f3d, #de7676);
+   padding: 5px 10px;
+   -webkit-border-radius: 8px;
+   -moz-border-radius: 8px;
+   border-radius: 8px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+   color: white;
+   font-size: 13px;
+   font-family: Georgia, serif;
+   text-decoration: none;
+   vertical-align: middle;
+}
+#mode_button:hover{
+   border-top-color: #C0C2C2;
+   background: #C0C0C0;
+   color: #ccc;
+}
+
+#mode_button:active{
+  border-top-color: #1b5c3d;
+   background: #1b5c3d;
+}
    .ok{
     color:green;
    }
